# Senior-Project

./: .gitignore  .gitlab-ci.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  LICENSE  README.md  README.rst  install.sh  requirements.txt  setup.cfg  setup.py  setup.sh  tox.ini  tox.ini.bck
antikythera/: Logfile.py  __init__.py  antikythera.py  capture.py  cli.py  conditions.py  decoder.py  gui.py  kivylogs.py  mainscreen.kv  metricdisplay.ini  metrics.py  radio.py  settings.json  skeleton.py
antikythera/packets/: assign.py  factory.py  packet.py  page.py  system.py
docs/: authors.rst  changes.rst  conf.py  index.rst
docs/pages/: development.rst  faq.rst  hardware.rst  install.rst  usage.rst
docs/pages/stl/: pi_display_r0.stl  pi_display_r1.stl  pi_display_r2.stl  pi_display_r3.stl  spacer.stl
tests/: lonelyMetric.py  test_cli_parser.py  test_imposter_cell.py  test_inconsistent_lac.py  test_lonely_metric.py  test_skeleton.py
